--- a/server/package.json
+++ b/server/package.json
@@ -10,28 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.29.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.0",
-    "multer": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
-    "@azure/storage-blob": "^12.2.0"
+    "mongoose": "^7.0.0",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "nodemon": "^2.0.7",
-    "jest": "^26.6.3",
-    "@types/bcryptjs": "^2.4.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^26.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.10.3",
-    "@types/multer": "^1.4.7",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/node": "^18.15.0"
+    "@types/multer": "^1.4.13",
+    "@types/node": "^18.15.0",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "keywords": [
     "photo-sharing",
